# modbusgw-gpio

./: .gitmodules  CMakeLists.txt  gpio_backend.cpp  gpio_backend.h  ini_parser.cpp  ini_parser.h  main.cpp  modbus_gpio_gateway.cpp  modbus_gpio_gateway.h  modbus_slave_adapter.cpp  modbus_slave_adapter.h  protocol_adapter.h  readme.md
install/: config.ini  modbusgw-gpio.service
